<resources>
    <string name="app_name">ASE-Merchant</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Orders</string>
    <string name="title_notifications">Profile</string>

    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter One Time Password sent to your mobile Number</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_signout">Sign-Out</string>
    <string name="menu_help">Help ?</string>

    <string name="Rs">\u20B9</string>

    <string name="home_second">Home Second</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="go">Go</string>

</resources>
